--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alch/alchemy-web3": "^1.1.7",
     "bootstrap": "^4.1.3",
+    "fs": "0.0.1-security",
     "ipfs-http-client": "^53.0.1",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
