--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "ConnectionStrings": {
+    "AzureDB": "Data Source=tcp:autonetdemodb.database.windows.net,1433;Initial Catalog=AutoNetDemoDB;User Id=SQL_Admin@autonetdemodb;Password=yne7KJI6bx389anVLa1A"
+  },
+  "AllowedHosts": "*"
 }
