Working on authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "AzureDB": "Data Source=tcp:autonetdemodb.database.windows.net,1433;Initial Catalog=AutoNetDemoDB;User Id=SQL_Admin@autonetdemodb;Password=yne7KJI6bx389anVLa1A"
   },
+  "Jwt": {
+    "Key": "We were somewhere around Barstow, on the edge of the desert, when the drugs began to take hold.",
+    "Issuer": "https://localhost:44383",
+    "Audience": "https://localhost:44383"
+  },
   "AllowedHosts": "*"
 }
