--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.7",
+    "axios": "^0.24.0",
     "bootstrap": "^4.1.3",
     "fs": "0.0.1-security",
     "ipfs-http-client": "^53.0.1",
